# mastering

./: .gitignore  CMakeLists.txt
applications/: hanoi.cpp  queens.cpp  queens_anim.cpp  queens_rec.cpp
datastructures/: CMakeLists.txt
datastructures/include/: list.hpp  tree.hpp
datastructures/src/: list.cpp
doc/: Algorithms.lhs  Concurrency.tex  Functional.lhs  Graph.tex  Hashtable.tex  List.lhs  Main.tex  Parallel.tex  Recursion.lhs  Solutions.lhs  Trees.tex
haskell/: CHANGELOG.md  mastering.cabal
haskell/app/: Hanoi.hs
tests/: ds.cpp  ds_test.cpp  list_test.cpp
