cabal-version:      2.4
name:               mastering
version:            0.1.0.0
author:             Oliver Krischer
maintainer:         oliver.krischer@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable mastering
    main-is:  Hanoi.hs
    build-depends:
        base ^>=4.17.2.0,
        diagrams-lib,
        diagrams-svg,
        colour,
        mastering

    hs-source-dirs:   app
    default-language: Haskell2010
